// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default table cell 1`] = `
<td
  className="cell"
  role="gridcell"
/>
`;

exports[`should render a table cell with content 1`] = `
<td
  className="cell"
  role="gridcell"
>
  Content
</td>
`;

exports[`should render a table cell with refCallback 1`] = `
<td
  className="cell"
  role="gridcell"
/>
`;
